[package]
name = "writerator"
version = "0.1.0"
edition = "2021"
description = "Defines a common interface, a Writerator, which is essentially an iterator that is written to instead of read."
license = "MIT"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
